[gd_scene load_steps=3 format=3 uid="uid://bkt0alnvw6ufk"]

[ext_resource type="Script" path="res://scenes/menu/settings/settings.gd" id="1_drtx7"]
[ext_resource type="Theme" uid="uid://2mc6krbox3lb" path="res://assets/themes/MinimalUI.tres" id="2_44ksc"]

[node name="settings" type="TabContainer"]
custom_minimum_size = Vector2(1000, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_44ksc")
current_tab = 0
script = ExtResource("1_drtx7")

[node name="GAMEPLAY" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_44ksc")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GAMEPLAY"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GAMEPLAY/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MouseSensLabel" type="Label" parent="GAMEPLAY/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " sensitivity"

[node name="MouseSensSlider" type="HSlider" parent="GAMEPLAY/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 0.05
max_value = 0.7
step = 0.025
value = 0.25

[node name="MouseSensValueLabel" type="Label" parent="GAMEPLAY/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.25"
horizontal_alignment = 1

[node name="Label" type="Label" parent="GAMEPLAY/VBoxContainer"]
layout_mode = 2

[node name="x" type="Button" parent="GAMEPLAY"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "     x     "

[node name="GRAPHICS" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_44ksc")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GRAPHICS"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GRAPHICS/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="FullscreenLabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " fullscreen"

[node name="FullscreenOptionButton" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "disabled"
popup/item_1/text = "enabled"
popup/item_1/id = 1

[node name="ResolutionLabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " resolution"

[node name="resolutions" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="LimitFPSLabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " FPS limit"

[node name="LimitFPSSlider" type="HSlider" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " vsync"

[node name="VsyncOptionButton" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "disabled"
popup/item_1/text = "adaptive"
popup/item_1/id = 1
popup/item_2/text = "enabled"
popup/item_2/id = 2

[node name="Label" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "VIDEO SETTINGS"

[node name="FilterLabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " display filter"

[node name="FilterOptionButton" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "bilinear"
popup/item_1/text = "FSR 1.0"
popup/item_1/id = 1

[node name="FSRSharpnessLabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " FSR sharpness:"

[node name="FSRSharpnessSlider" type="HSlider" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TAALabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " anti-aliasing (TAA)"

[node name="TAAOptionButton" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
popup/item_0/text = "disabled"
popup/item_1/text = "enabled"
popup/item_1/id = 1

[node name="MSAALabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " anti-aliasing (MSAA)"

[node name="MSAAOptionButton" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
popup/item_0/text = "disabled"
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="FXAALabel" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = " anti-aliasing (FXAA)"

[node name="FXAAOptionButton" type="OptionButton" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
popup/item_0/text = "disabled"
popup/item_1/text = "enabled"
popup/item_1/id = 1

[node name="space" type="Label" parent="GRAPHICS/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="x" type="Button" parent="GRAPHICS"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "     x     "

[node name="AUDIO" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_44ksc")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AUDIO"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="AUDIO/VBoxContainer"]
layout_mode = 2
text = " VOLUME"

[node name="volume" type="HSlider" parent="AUDIO/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="AUDIO/VBoxContainer"]
layout_mode = 2

[node name="x" type="Button" parent="AUDIO"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "     x     "

[node name="KEY BINDINGS" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_44ksc")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="KEY BINDINGS"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="KEY BINDINGS/VBoxContainer"]
layout_mode = 2

[node name="x" type="Button" parent="KEY BINDINGS"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "     x     "

[connection signal="pressed" from="GAMEPLAY/x" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/FullscreenOptionButton" to="." method="_on_fullscreen_option_button_item_selected"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="value_changed" from="GRAPHICS/ScrollContainer/VBoxContainer/LimitFPSSlider" to="." method="_on_limit_fps_slider_value_changed"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/VsyncOptionButton" to="." method="_on_vsync_option_button_item_selected"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/FilterOptionButton" to="." method="_on_filter_option_button_item_selected"]
[connection signal="value_changed" from="GRAPHICS/ScrollContainer/VBoxContainer/FSRSharpnessSlider" to="." method="_on_fsr_sharpness_slider_value_changed"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/TAAOptionButton" to="." method="_on_taa_option_button_item_selected"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/MSAAOptionButton" to="." method="_on_msaa_option_button_item_selected"]
[connection signal="item_selected" from="GRAPHICS/ScrollContainer/VBoxContainer/FXAAOptionButton" to="." method="_on_fxaa_option_button_item_selected"]
[connection signal="pressed" from="GRAPHICS/x" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="AUDIO/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="AUDIO/x" to="." method="_on_back_pressed"]
[connection signal="pressed" from="KEY BINDINGS/x" to="." method="_on_back_pressed"]
